CE-1530 Fixes missaligned text on abour popup

--- a/src/renderer/theme/Main.global.scss
+++ b/src/renderer/theme/Main.global.scss
@@ -8,7 +8,7 @@ body {
   padding: 0;
 
   height: 100vh;
-  min-width: 1024px;
+  // min-width: 1024px;
   background-color: var(--background-color-primary);
 
   &::before {
